--- a/RoboWeb/Site.Master
+++ b/RoboWeb/Site.Master
@@ -46,14 +46,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Application name</a>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Teste</a></li>
-                        <li><a runat="server" href="~/About">About</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
-                    </ul>
+                    <a class="navbar-brand" runat="server" href="~/">Robô</a>
                 </div>
             </div>
         </div>
@@ -62,7 +55,7 @@
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p><%: DateTime.Now.Year %> - My ASP.NET Application</p>
+                <p><%: DateTime.Now.Year %> - Application Robot</p>
             </footer>
         </div>
 
